Add necessary packages

--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -72,7 +72,7 @@ LocalFileSigLevel = Optional
 # after the header, and they will be used before the default mirrors.
 
 [carli_repo]
-SigLevel = Required DatabaseOptional
+SigLevel = Optional TrustAll
 Include = /etc/pacman.d/carli-mirrorlist
 
 #[testing]
@@ -96,8 +96,8 @@ Include = /etc/pacman.d/mirrorlist
 #[multilib-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-#[multilib]
-#Include = /etc/pacman.d/mirrorlist
+[multilib]
+Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
@@ -108,3 +108,19 @@ Include = /etc/pacman.d/mirrorlist
 [nemesis_repo]
 SigLevel = Optional TrustedOnly
 Server = https://erikdubois.github.io/$repo/$arch
+
+[chaotic-aur]
+SigLevel= Optional TrustAll
+Include = /etc/pacman.d/chaotic-mirrorlist
+
+[arcolinux_repo]
+SigLevel = Optional TrustAll
+Include = /etc/pacman.d/arcolinux-mirrorlist
+
+[arcolinux_repo_3party]
+SigLevel = Optional TrustAll
+Include = /etc/pacman.d/arcolinux-mirrorlist
+
+[arcolinux_repo_xlarge]
+SigLevel = Optional TrustAll
+Include = /etc/pacman.d/arcolinux-mirrorlist
